@@ -331,6 +331,7 @@ since it could result in memory overflow and make Emacs crash."
 	     (unibyte-display-via-language-environment mule boolean)
 	     (blink-cursor-alist cursor alist "22.1")
 	     (overline-margin display integer "22.1")
+	     (underline-minimum-offset display integer "23.1")
              (mouse-autoselect-window
 	      display (choice
 		       (const :tag "Off (nil)" :value nil)
@@ -348,7 +349,6 @@ since it could result in memory overflow and make Emacs crash."
 	     ;; xterm.c
 	     (x-use-underline-position-properties display boolean "22.1")
 	     (x-underline-at-descent-line display boolean "22.1")
-	     (x-underline-minimum-display-offset display integer "23.1")
 	     (x-stretch-cursor display boolean "21.1")))
       this symbol group type standard version native-p
       ;; This function turns a value
